# modbus_recoder

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.claude/prds/: modbus-reader-bug-fixes.md  modbus_reader.md
.github/workflows/: build-windows.yml
scripts/: test-address-refresh.sh  test-f32.sh  verify-f32-fix.sh
src/: App.test.tsx  App.tsx  index.css  main.tsx  test-setup.ts  test-utils.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: modbus_benchmarks.rs
src-tauri/capabilities/: migrated.json
src-tauri/icons/: README.md  icon.icns
src-tauri/scripts/: test.sh
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: connection.rs  file_operations.rs  mod.rs  reading.rs
src-tauri/src/modbus/: client.rs  client_tests.rs  error.rs  manager.rs  mod.rs  types.rs
src-tauri/tests/: integration_tests.rs  modbus_tests.rs
src-tauri/tests/common/: mod.rs
src/components/: AddressRangeDialog.tsx  AddressRangeManager.tsx  BatchCollection.tsx  ConfirmDialog.tsx  ConnectionConfig.tsx  DataReader.tsx  ErrorBoundary.tsx  HelpTooltip.tsx  LoadingSpinner.tsx  LoadingStates.tsx  SingleRead.tsx  StatusIndicator.tsx  ToastProvider.tsx
src/contexts/: AddressRangeContext.tsx
src/hooks/: useAddressRanges.ts  useErrorHandler.ts  useKeyboardShortcuts.ts  useReadHistory.ts
src/types/: errors.ts  modbus.ts
src/utils/: addressValidation.ts  dataFormatter.ts  dataParser.ts  errorHandler.ts  index.ts  notifications.ts
(+80 files in other folders)
